--- a/css/style.css
+++ b/css/style.css
@@ -17,21 +17,6 @@ html, body, #contentcontainer, #maintr2 {
     height: 32px;
 }
 
-h2 {
-    background-image: url(../images/h2bg.png);
-    background-repeat: repeat-x;
-    font-family: verdana;
-    font-weight: bold;
-    margin-bottom: 1em;
-    margin-left: -15px;
-    margin-right: -15px;
-    padding: 3px 0px 3px 16px;
-    font-size: 1em;
-    height: 20px;
-    color: #4b4b4b;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-}
 
 .hotlinks a {
     color: red;
@@ -52,11 +37,9 @@ th{
 }
 
 #header {
-    background-color: #67abeb;
     height: 100px;
     text-align: center;
     color: white;
-    background-image: url(../images/headbg.png);
 }
 
 #header a {
@@ -159,7 +142,6 @@ a {
 .submenu img { border: none; }
 
 #submenucontainer {
-    background-image: url(../images/bar2.png);
     background-repeat: repeat-x;
     background-color: #79997e;
 }
@@ -177,7 +159,6 @@ a {
 #mainmenu {
     background-color: #8a8a8a;
     height: 35px;
-    background-image: url(../images/mainmenubg.png)
 }
 
 #mainmenu li {
@@ -189,7 +170,7 @@ a {
     font-family: verdana;
     font-size: 13pt;
     font-weight: normal;
-    border-right: 1px solid #525252;
+    /* border-right: 1px solid #525252; */
     height: 32px;
 }
 
